# CurveFitting

./: .gitignore  CMakeLists.txt  README.md
GUI/: CMakeLists.txt  Config.cmake.in  Spline.pc.in
GUI/forms/: choosefiledialog.ui  choosesplinedialog.ui  mainwindow.ui  mainwindow.ui.autosave  savedialog.ui
GUI/include/: PointsSelecter.h  PointsStorage.h  choosefiledialog.h  choosesplinedialog.h  graphics_view_zoom.h  lib_functions.h  mainwindow.h  savedialog.h
GUI/src/: CMakeLists.txt  PointsSelecter.cpp  PointsStorage.cpp  choosefiledialog.cpp  choosesplinedialog.cpp  graphics_view_zoom.cpp  lib_functions.cpp  mainwindow.cpp  savedialog.cpp
include/: AbstractSpline.h  AbstractSplineCreator.h  AkimaSpline.h  AkimaSplineGSL.h  BSpline.h  CubicSpline.h  Generator.h  Interpolator.h  LinearGSL.h  SplineCreator.h  SplineFactory.h  SplineTypes.h  SteffenSpline.h
src/: AbstractSpline.cpp  AkimaSpline.cpp  AkimaSplineGSL.cpp  BSpline.cpp  CMakeLists.txt  CubicSpline.cpp  Generator.cpp  LinearGSL.cpp  SteffenSpline.cpp  interpolator.cpp  main.cpp
